welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:2: error: not found: value nbDe9
  nbDe9=0
  ^arrayCount9:5: error: not found: value nbDe9
      nbDe9=nbDe9+1
      ^arrayCount9:7: error: not found: value nbDe9
    return nbDe9
           ^arrayCount9:3: error: type mismatch;
 found   : Unit
 required: Int
  for (i<-0 to nums.length-1) {
        ^